2013/11/07 (version 1.13)

- Use real task urgency, which tasks are now sorted by.


2013/11/06 (version 1.12)

- Fixed a bug with tasks that have no project assigned.
- Strip trailing URLs from task descriptions.
- Moved project name to the end of the menu item, and only show
  it if the task has one.
- Don't open task webpage on start (there's a separate button for that).
- Fixed an error when a task had no priority.
- Database location is now requested from TaskWarrior, not hard-coded.


2013/11/05 (version 1.8)

- Fixed a bug in database parser error reporting.


2013/10/31 (version 1.7)

- Search window no longer closes when a task dialog is opened
  by double-clicking a table row.
- The "Show all" checkbox in the search window is now named
  "show completed".
- There's now an "Add" button in the search window.


2013/10/28 (version 1.6)

- License changed to MIT.
- Fixed adding new tasks.
- Fixed notes from last edited task showing up in the new task dialog.


2013/10/23 (version 1.3)

- Start/Stop buttons no longer reset current project.
- Fixed parsing tags with taskw.
- Support for task notes.


2013/10/18

- Start/Stop button no longer closes the properties dialog.
- The taskw module now also reads completed and deleted tasks.
- Fixed completed tasks being shown by default.


2013/10/17

- Added a new module taskw.py, which is a simple database parser.
- Current task duration is shown in the properties dialog.
- Sorting by urgency temporarily doesn't work.


Version 1.2

- Tasks tagged with "pin" are always show at the top of the indicator menu.


Version 1.1

- Tasks tagged as "endless" moved to the end of the indicator menu.